# SurfaceTransformer

./: downloader.py  main.py  pyproject.toml  visualization.ipynb
models/: dataset.py  loss.py  module.py  net.py  utils.py
