[project]
name = "surfacetransformer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnxscript>=0.6.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "wandb>=0.25.0",
]
