[project]
name = "surfacetransformer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "airspeed>=0.6.1",
    "ipykernel>=7.2.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "onnxscript>=0.6.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pytorch-optimizer>=3.9.0",
    "rational-activations",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "torch>=2.10.0",
    "wandb>=0.25.0",
    "wrds>=3.5.0",
]

[tool.uv.sources]
rational-activations = { git = "https://github.com/ml-research/rational_activations.git" }
